fix mobile spacing

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
   }
   
   button, input[type="text"] {
-    padding: 5px;
+    padding: 5px; 
   }
   
   button:hover {
@@ -24,8 +24,7 @@
   }
 
   h1, h4 {
-      text-align: center;
-      
+      text-align: center;  
   }
   
   .container {
@@ -88,22 +87,37 @@
     border-radius: 5px;
   }
 
-  img, .lab {
+  img {
       width: 80%;
       display: block;
       margin: auto;
       padding-top: 5%;
   }
 
+  .lab {
+    width: 100%;
+    display: block;
+    margin: 1px;
+    padding-bottom: 3%;
+}
+
   .button{
     display: block;
+    width: 80%;
     margin: auto;
+    margin-bottom: 3%;
   }
   
-  @media all and (max-width: 800px) {
-    /* #results, #y-results{
-       flex-direction: row;
-     } */
+  @media all and (max-width: 600px) {
+    .align1{
+        padding-right: 80px;
+        padding-left: 20px;
+      }
+    
+      .align2{
+        padding-right: 46px;
+        padding-left: 20px;
+      }
    
      .sect, #js-form{
         display: flex; 
@@ -111,11 +125,38 @@
      }
  }
 
-  @media all and (min-width: 800px) {
+  @media all and (min-width: 600px) {
      /* #results, #y-results{
         flex-direction: row;
       } */
-    
+      .lab {
+        width: 50%;
+        padding-left: 10%;
+        padding-top: 10%;
+        padding-bottom: 10%;
+        font-weight: bold;
+      }
+
+      .align2{
+        padding-right: 43.3px;
+      }
+
+      .bot {
+        width: 50%;
+        margin: 0;
+        padding-top: 10%;
+        padding-bottom: 10%;
+      }
+
+      .button{
+        margin-top: 0%;
+        margin-bottom: 5%;
+        padding-top: 3%;
+        padding-bottom: 3%;
+        font-size: 16px;
+        font-weight: bold;
+      }
+
       .sect, #js-form{
         display: flex;
         flex-direction: row;
